<resources>
    <string name="app_name">NicepaySNAP</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="nicepay_snap_label">Nicepay SNAP</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Welcome to Nicepay Android Simulation. Please select your payment method by clicking cart logo in the buttom-right</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_email_hint">Name</string>
    <string name="login_password_hint">Amount</string>
    <string name="ewallet_goods_name">Goods Name</string>
    <string name="ewallet_billing_phone">Billing Phone</string>
    <string name="qris_billing_name">Billing Name</string>
    <string name="qris_merchant_id">Merchant Id</string>
    <string name="qris_store_id">Store Id</string>
    <string name="ewallet_tx_id">Reference Transaction Id (Original Reference No)</string>
    <string name="ewallet_reference_no">Partner Reference No (Original Partner Reference No)</string>
    <string name="ewallet_refund_reason">Reason to Refund</string>
    <string name="ewallet_amount">Amount</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="payout_beneficiary_no">Beneficiary Number (Account Number)</string>
    <string name="payout_beneficiary_name">Beneficiary Name</string>
    <string name="payout_beneficiary_phone">Beneficiary Phone Number</string>
    <string name="payout_reserved_date">Reserved Date</string>
    <string name="payout_reserved_time">Reserved Time</string>

    <string name="register">REGISTER</string>
    <string name="inquiry">CHECK STATUS</string>
    <string name="refund">Refund</string>
    <string name="check_balance">Check Balance</string>

    <string-array name="bankCode">
        <item>BRIN</item>
        <item>BNIN</item>
        <item>CENA</item>
        <item>BMRI</item>
        <item>CIMB</item>
        <item>Danamon</item>
        <item>Maybank</item>
        <item>BBBA</item>
        <item>BBBB</item>
        <item>BJB</item>
        <item>BNC</item>
    </string-array>

    <string-array name="mitraCode">
        <item>DANA</item>
        <item>ShopeePay</item>
        <item>LinkAja</item>
        <item>OVO</item>
    </string-array>

    <string-array name="mitraCodeQr">
        <item>QRIS ShopeePay</item>
    </string-array>

    <string-array name="refundType">
        <item>Full</item>
        <item>Partial</item>
    </string-array>

    <string-array name="payoutBankCode">
        <item>BMRI</item>
        <item>BDIN</item>
    </string-array>

    <string-array name="payoutMethod">
        <item>Internal Transfer</item>
        <item>Online Transfer</item>
        <item>SKN</item>
        <item>RTGS</item>
    </string-array>
</resources>